--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 	scroll-behavior: smooth;
 }
 main{
-	background-color: rgb(0, 0, 0,.25);
+	background-color: rgb(0, 0, 0,.25); padding-bottom: 100px;
 }
 .return-top-wrapper {
     text-align: center;
@@ -92,7 +92,7 @@ h2{
 h3{
 	background-color: rgb(204, 0, 0); color: white;
 	width: 100%; margin: 0;
-	padding: 50px; text-align: center;
+	padding: 30px; text-align: center;
 	font-size: 1.8rem; font-family: 'charter', 'Times New Roman', Times, serif;
 }
 h4{
@@ -117,7 +117,7 @@ p{
 /*homepage*/
 .opening-image-container {
     position: relative;
-    width: 100%; height: auto;
+    max-width: 100%; height: auto;
 }
 .opening-image-container img {
     width: 100%; height: 600px;
@@ -155,7 +155,7 @@ p{
 	gap: 20px; margin: 0px 0px; padding-top: 80px; padding-bottom: 80px;
 }
 .profile-card {
-	background-color:  black;
+	background-color:  rgb(40, 40, 40);
 	border-radius: 12px;
 	padding: 20px;
 	width: 180px;
@@ -170,13 +170,18 @@ p{
 }
 .name {
 	font-weight: bold; font-family: 'charter', 'Times New Roman', Times, serif;
-	font-size: 1.1em;
+	font-size: 1.3em; letter-spacing: .08rem;
 	margin-bottom: 5px;
-	color:  rgb(153, 0, 0);
+	color:  rgb(201, 0, 0);
+    text-shadow: 
+        -0.5px -0.5px 0 #8b8b8b,
+         0.5px -0.5px 0 #8b8b8b,
+        -0.5px  0.5px 0 #8b8b8b,
+         0.5px  0.5px 0 #8b8b8b;
 }
 .job-title {
 	font-size: 0.9em; font-family: Helvetica, sans-serif, arial;
-	color: #959595;
+	color: #acacac;
 }
 .profile-card:hover{
 	transform: scale(1.5);
@@ -185,13 +190,13 @@ p{
 
 /*homepage heading specific*/
 #purpose{
-	background-color: black; color: white; 
-	margin: 0px; padding: 50px 50px; 
+	background-color: rgb(40, 40, 40); color: white; 
+	margin: 0px; padding: 30px 50px; 
 	text-align: center; font-family: Helvetica, sans-serif, arial;
 }
 #leaders{
 	background-color: rgb(204, 0, 0); color:  white;
-	width: 100%; Margin: 0; padding: 50px; text-align: center;
+	width: 100%; Margin: 0; padding: 30px; text-align: center;
 	font-size: 1.8rem; font-family: 'charter', 'Times New Roman', Times, serif;
 }
 #News-heading{
@@ -280,7 +285,7 @@ p{
 }
 .info-disclaimer{
     background-color: rgb(204, 0, 0); color: #d4d4d4;
-    margin: 0px; padding: 50px; padding-top: 0px;
+    margin: 0px; padding: 30px; padding-top: 0px;
     text-align: center; font-family: Helvetica, sans-serif, Arial; font-size: 1.2rem;
 }
 
@@ -364,12 +369,12 @@ a.waiver{
 }
 .requirement-card p {
     font-size: 0.9rem; font-family: Helvetica, sans-serif, Arial;
-    color: black; text-align: center;
+    color: black; text-align: center; font-weight: bold;
     margin: auto auto;
 }
 a.requirement-link{
     font-size: 0.9rem; font-family: Helvetica, sans-serif, Arial;
-    display: block;
+    display: block; font-weight: bold;
 	color: black; text-align: center; text-decoration: none;
     margin: auto auto;   
 }
@@ -462,6 +467,7 @@ a.requirement-link{
     font-size: 4rem;text-align: center; font-family: 'charter', 'Times New Roman', Times, serif;
     padding: 10px 20px; border-radius: 10px;
 }
+
 #sched-tryout-heading {
 	margin-top: 0px;
 }
@@ -475,12 +481,92 @@ a.requirement-link{
     color: rgb(232, 3, 3);
 }
 
+.practice-schedule-container {
+    display: flex; flex-wrap: wrap;
+    justify-content: center;
+    margin: 40px 75px; gap: 100px;
+}
+.practice-card {
+    background-color: white;
+    border-radius: 10px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    padding: 30px 40px;
+    width: 500px;
+    font-family: Helvetica, sans-serif, Arial;
+}
+.practice-card h4 {
+    font-size: 1.3rem; font-family: 'charter','Times New Roman', Times, serif;
+    margin-bottom: 10px;
+    color: rgb(153, 0, 0);
+}
+.practice-card p {
+    margin: 5px 10px;
+    font-size: 1rem; font-family: Helvetica, sans-serif, Arial;
+}
+.practice-note {
+    margin: 20px 75px; 
+    text-align: center; font-size: 1.2rem; font-family: Helvetica, sans-serif, Arial; font-style: italic;
+}
+
+.tournament.container {
+    display: flex; justify-content: center;
+    margin: 0px; margin-top: 10px;
+    text-align: center;
+}
+.spring-tournament, .schedule-2025 {
+    font-size: 4rem; font-weight: bold; font-family: 'charter', 'Times New Roman', Times, serif;
+    text-align: center;
+    position: relative;
+    z-index: 10;
+}
+.spring-tournament, .schedule-2025 {
+    text-align: center; align-content: center;
+    position: relative; display: inline-flex;
+    margin: 0px; padding: 50px;
+}
+.spring-tournament {
+    color: white; transform: rotate(-2deg);
+    text-shadow:
+        -1px -1px 0 red,
+         1px -1px 0 red,
+        -1px  1px 0 red,
+         1px  1px 0 red;
+}
+.schedule-2025 {
+    color: rgb(204, 0, 0); transform: rotate(2deg);
+    text-shadow:
+        -1px -1px 0 white,
+         1px -1px 0 white,
+        -1px  1px 0 white,
+         1px  1px 0 white;
+}
+
+.tourny {
+    margin-bottom: 50px;
+}
+.tourny-dates  {
+    margin-left: auto; margin-right: auto; margin-top: 30px; margin-bottom: 50px;
+    max-width: 70%; transform: rotate(-2deg);
+    font-size: 1.2rem; font-weight: bold; font-family: Helvetica, sans-serif, Arial;
+    color: black; background-color: #f7f7f7;
+    padding: 15px 25px;
+    border-left: 6px solid rgb(153, 0, 0); box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+.tourny-dates2  {
+    margin-left: auto; margin-right: auto; margin-top: 50px; margin-bottom: 50px;
+    max-width: 60%; text-align: right; transform: rotate(2deg);
+    font-size: 1.2rem; font-weight: bold; font-family: Helvetica, sans-serif, Arial;
+    color: black; background-color: #f7f7f7;
+    padding: 15px 25px;
+    border-right: 6px solid black; box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+
+
 
 /*About*/
 .Ateam-banner {
-    display: flex;
+    display: flex; overflow: hidden; 
     justify-content: center; align-items: center;
-    overflow: hidden; 
     width: 100%; margin: 0px;
 }
 .group-A-pic {
@@ -488,9 +574,8 @@ a.requirement-link{
     object-fit: cover;
 }
 .Bteam-banner {
-    display: flex;
+    display: flex; overflow: hidden;
     justify-content: center; align-items: center;
-    overflow: hidden; 
     width: 100%; margin: 0px;
 }
 .group-B-pic {
@@ -499,7 +584,7 @@ a.requirement-link{
 }
 .story-text {
     font-family: Helvetica, sans-serif, arial; font-size: 1.4rem; text-align: center; line-height: 1.52em;
-    background-color: black; color: #f5f5f5; 
+    background-color: rgb(40, 40, 40); color: #f5f5f5; 
     padding: 40px 150px; margin: 0px;
 }   
 
@@ -582,8 +667,29 @@ a.requirement-link{
 }
 
 
-
-
+/*Contact*/
+.soap-image-container {
+    position: relative;
+    max-width: 100%; height: auto;
+}
+.SoapSuds {
+    width: 100%; height: 350px;
+    display: block;
+}
+.connect-button {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(153, 0, 0); color: white;
+    padding: 15px 30px;
+    font-size: 1.5rem; font-family: 'charter', 'Times New Roman', Times, serif; 
+    text-align: center; text-decoration: none; border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+.connect-button:hover {
+    background-color: black;
+}
 
 
 /*media responsiveness*/
