--- a/style.css
+++ b/style.css
@@ -14,15 +14,17 @@ main{
 }
 .return-top-wrapper {
     text-align: center;
-    margin: 50px 0;
+    margin: 0; padding: 20px; padding-bottom: 50px;
+    background-color: rgb(0, 0, 0,.25);
 }
 #return-top{
 	color: black; 
 	text-align: center;font-size: 1rem; font-family: Helvetica, sans-serif, arial; 
 }
 footer{
-	text-align: center; padding: 25px; margin-top: 50px;
+	text-align: center; padding: 25px; margin-top: 0px;
 	font-size: small; font-weight: bold; font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(0, 0, 0,.25);
 }
 
 
@@ -149,6 +151,7 @@ p{
 	transform: scale(1.5);
 }
 
+
 .profile-container {
 	display: flex; flex-wrap: wrap;
 	justify-content: space-around;
@@ -186,6 +189,20 @@ p{
 .profile-card:hover{
 	transform: scale(1.5);
 }
+.about-button-container {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.about-button {
+    background-color: rgb(153, 0, 0); color: white;
+    padding: 15px 30px;
+    font-size: 1.2rem; font-family: 'charter', 'Times New Roman', Times, serif; text-decoration: none;
+    border: none; border-radius: 30px;
+    transition: background-color 0.3s ease;
+}
+.about-button:hover {
+    background-color: black;
+}
 
 
 /*homepage heading specific*/
@@ -219,8 +236,7 @@ p{
     margin: 50px 75px; margin-top: 80px; padding: 20px;
     justify-content: space-between; align-items: center;
     background-color: white;  border-left: 6px solid rgb(153, 0, 0); box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}    
-    
+}      
 .roster-heading h5 {
     margin: 0; padding: 0;
     font-size: 2rem; font-family: 'charter', 'Times New Roman', Times, serif;
@@ -260,9 +276,10 @@ p{
     display: flex; justify-content: space-around; flex-wrap: wrap;
     margin: 0px; gap: 10px;
 	padding: 60px 50px;
+    background-image: url(smoke-background.jpg); background-size: cover; background-position: center;
 }
 .info-box {
-    background-color: white;
+    background-color: rgb(40, 40, 40); color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); border-radius: 10px;
     padding: 25px;
     display: flex; flex-direction: column; align-items: flex-start; flex: 1;
@@ -278,16 +295,17 @@ p{
 .info-box a{
     display: inline-block;
     margin: auto 10px; 
-    font-weight: bold; color: rgb(153, 0, 0); text-decoration: none;
+    font-weight: bold; color: white; text-decoration: none;
 }
 .info-box a:hover{
-    text-decoration: underline;
+    text-decoration: underline; transform: color rgb(204, 0, 0);
 }
 .info-disclaimer{
-    background-color: rgb(204, 0, 0); color: #d4d4d4;
+    background-color: rgb(204, 0, 0); color: rgb(234, 234, 234);
     margin: 0px; padding: 30px; padding-top: 0px;
     text-align: center; font-family: Helvetica, sans-serif, Arial; font-size: 1.2rem;
 }
+
 
 .requirements-container {
 	padding-top: 20px; padding-bottom: 50px; margin: 0px;
@@ -297,7 +315,7 @@ p{
 	font-family: Helvetica, sans-serif, arial; font-size: 1rem;
 }
 a.waiver{
-	margin-left: 75px; text-decoration: none; color: rgb(153, 0, 0);
+	margin-left: 75px; text-decoration: none; color: rgb(204, 0, 0);
 	font-family: Helvetica, sans-serif, arial;
 }
 
@@ -310,8 +328,8 @@ a.waiver{
 /*Tryouts*/
 .tryout-info-wrapper {
     display: flex; justify-content: center; align-items: center;
-    gap: 20px; margin: 50px auto;
-    max-width: 80%; height: 400px;
+    gap: 20px; margin: 50px 50px;
+    min-width: 700px; height: 400px;
 }
 .tryout-text-box {
     position: relative; flex: 1;
@@ -330,7 +348,7 @@ a.waiver{
 }
 .tryout-image{
     flex: 1; object-fit: cover;
-    max-width: 400px; max-height: 100%;
+    max-width: 400px; max-height: auto;
     border-radius: 8px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 .waiver2{
@@ -350,10 +368,11 @@ a.waiver{
     background-color: black;
 }
 
+
 .requirement-boxes {
     display: flex; flex-wrap: wrap;
-    justify-content: center;
-    gap: 100px; margin: 20px 75px;
+    justify-content: left;
+    gap: 20px; margin: 20px 50px; padding: 0px;
 }
 .requirement-card{
     background-color:  #f5f5f5;
@@ -363,7 +382,7 @@ a.waiver{
     text-align: center; font-family: Helvetica, sans-serif, Arial;
 }
 .requirement-card img {
-    width: 80px; height: 80px;
+    width: 70px; height: 70px;
     object-fit: contain;
     margin-bottom: 3px;
 }
@@ -382,19 +401,51 @@ a.requirement-link{
     text-decoration: underline; font-size: 1.1rem; font-weight: bold;
     color: rgb(153, 0, 0);
 }
+.requirements-flex-container {
+    display: flex; flex-wrap: wrap;
+    align-items: center; 
+    padding: 5px 50px;
+}
+.requirement-img-container {
+    display: flex; flex: 1;
+    align-items: center; justify-content: space-evenly;
+}
+.requirement-image {
+    max-height: 550px; width: auto;
+    border-radius: 10px; margin-left: 0px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+}
+
 
 .tryout-dates-container {
     display: flex; flex-wrap: wrap;
     justify-content: space-around; align-items: flex-start;
-    gap: 30px;
-    margin: 50px 75px;
+    margin: 50px 50px;
+    gap: 20px;
+}
+.tryout-background-wrapper {
+    position: relative; overflow: hidden;
+    width: 100%;
+    padding-top: 30px; padding-bottom: 30px;
+}
+.wavy-background {
+    position: absolute; z-index: -1;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+}
+.tryout-dates-container,
+#schedule-tryout-link {
+    position: relative;
+    z-index: 1;
 }
 .tryout-date-card {
     flex: 1 1 300px;
-    max-width: 500px;
+    max-width: 550px;
     background-color: #f5f5f5;
     border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    padding: 20px;
+    padding: 30px;
 }
 .tryout-date-card h4 {
     margin-left: 0; text-align: left;
@@ -472,15 +523,16 @@ a.requirement-link{
 	margin-top: 0px;
 }
 #schedule-tryout-link {
-    display: block; text-align: center; margin: 20px auto; 
+    display: block; text-align: center; margin: 20px 100px; padding: 10px;
     font-weight: bold; font-size: 1.2rem; text-decoration: none; font-family: Helvetica, sans-serif, Arial;
-    color: rgb(153, 0, 0);
+    color: rgb(153, 0, 0); background-color: white; 
+    border-radius: 30px; border: 2px solid black;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 #schedule-tryout-link:hover {
     text-decoration: underline;
     color: rgb(232, 3, 3);
 }
-
 .practice-schedule-container {
     display: flex; flex-wrap: wrap;
     justify-content: center;
@@ -590,9 +642,10 @@ a.requirement-link{
 
 
 .social-media-section {
+    background-image: url('socialmedia-background.jpg'); background-size: cover; background-position: center;
     display: flex; justify-content: center; align-items: center;
     gap: 50px;
-    padding: 50px 50px;
+    padding: 70px 50px;
 }
 .social-icon {
     max-width: 250px; max-height: 250px;
@@ -604,25 +657,34 @@ a.requirement-link{
 
 
 .youtube-section {
-    margin: 50px auto;
-    max-width: 900px;
+    display: flex;  
+    background-image: url('youtube-background.jpg'); background-size: cover; background-position: center;
+    min-height: 100%; width: auto;
+    align-items: center; justify-content: space-around;
+    padding: 250px 0;
+    width: 100%;
+}
+.youtube-text {
+    justify-content: center;
     text-align: center;
+    padding: 0px 50px; padding-bottom: 30px; margin: 0;
+    font-size: 1.2rem; font-family: Helvetica, sans-serif, Arial;
+    background-color: rgb(204, 0, 0); color: #ffffff; text-align: center;
+
 }
-.youtube-section p {
-    font-family: Helvetica, sans-serif, Arial; font-size: 1.2rem; font-weight: bold;
-    margin: 0px;
-}
-.youtube-link {
-    display: inline-block; text-align: center;
-    margin-top: 15px; margin-bottom: 100px;
-    font-weight: bold; font-size: 1.1rem; text-decoration: none; font-family: 'charter', 'Times New Roman', Times, serif;
-    color: rgb(153, 0, 0);
-}
-.youtube-link:hover {
-    text-decoration: underline;
+.click-here-text {
+    text-align: center; font-size: 1.2rem; font-weight: bold; font-family: 'charter', 'Times New Roman', Times, serif;
+    margin: 0; margin-bottom: 10px;
     color: black;
 }
-
+.youtube-logo {
+    display: flex; flex: 1; flex-direction: column;
+    justify-content: center; align-items: center;
+}
+.youtube-hover {
+    transition: transform 0.3s ease; transform: scale(1.2);
+    max-width: 120px;
+}
 
 
 
@@ -690,6 +752,50 @@ a.requirement-link{
 .connect-button:hover {
     background-color: black;
 }
+
+
+.contact-section {
+    display: flex; flex-wrap: nowrap;
+    justify-content: space-between; align-items: center; 
+    padding: 40px 50px;
+}
+.contact-box-container {
+    display: flex; flex: 1; flex-direction: column;
+}
+.contact-box {
+    display: flex; align-items: center;
+    gap: 10px;
+    margin: 20px 25px; padding: 20px 50px;
+    background-color: #f5f5f5;
+    border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+.contact-image-wrapper {
+    display: flex; flex: 1;
+    justify-content: center; align-items: center;
+}
+.contact-side-image {
+    max-width: 300px; height: auto;
+    border-radius: 12px; transform: rotate(9deg);
+    background-color: rgb(204, 0, 0); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+}
+.contact-box img {
+    width: 100px; height: 100px;
+    object-fit: cover; border-radius: 8px; box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
+.contact-box h4, .contact-box p {
+    margin-left: 0; padding: 0;
+}
+.contact-box a {
+    text-decoration: none;
+    color: rgb(153, 0, 0);
+    font-weight: bold;
+}
+.contact-box a:hover {
+    text-decoration: underline;
+}
+
+
+
 
 
 /*media responsiveness*/
