--- a/style.css
+++ b/style.css
@@ -151,14 +151,18 @@ p{
 	transform: scale(1.5);
 }
 
-
+.leadership-section {
+    background-image: url(tryout-background.jpg);
+    background-size: cover; background-position: center; background-repeat: no-repeat;
+    padding-top: 20px; padding-bottom: 20px;
+}
 .profile-container {
 	display: flex; flex-wrap: wrap;
 	justify-content: space-around;
 	gap: 20px; margin: 0px 0px; padding-top: 80px; padding-bottom: 80px;
 }
 .profile-card {
-	background-color:  rgb(40, 40, 40);
+	background-color: white;
 	border-radius: 12px;
 	padding: 20px;
 	width: 180px;
@@ -184,7 +188,7 @@ p{
 }
 .job-title {
 	font-size: 0.9em; font-family: Helvetica, sans-serif, arial;
-	color: #acacac;
+	color: rgb(85, 85, 85); padding: 5px;
 }
 .profile-card:hover{
 	transform: scale(1.5);
@@ -328,8 +332,9 @@ a.waiver{
 /*Tryouts*/
 .tryout-info-wrapper {
     display: flex; justify-content: center; align-items: center;
-    gap: 20px; margin: 50px 50px;
+    gap: 20px; padding: 300px 50px; margin: 0;
     min-width: 700px; height: 400px;
+    background-image: url(tryout-b&w.jpg); background-size: contain; background-position: center;
 }
 .tryout-text-box {
     position: relative; flex: 1;
