--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ a.requirement-link{
 }
 .navbar ul {
     display: flex; flex-direction: row; justify-content: flex-end;
-    width: 100%; margin-top: 0;
+    width: 100%;  padding: auto 10px; margin: 0;
     font-size: 1rem; 
 }
 .navbar li {
@@ -923,7 +923,37 @@ a.requirement-link{
     display: block;
 }
 }
-
+@media (max-width: 450px) {
+    .navbar {
+        display: flex; flex-direction: column; justify-content: space-around;
+        align-items: center;
+        padding: 0px; width: 100%;
+        position: fixed;
+        z-index: 1000;
+    }
+    .navbar img {
+        width: 300px; 
+        margin: 0; padding: 0;
+    }
+    .navbar ul {
+        display: flex; flex-direction: row;
+        padding: auto 10px; margin: 0;
+    }
+    .navbar ul li ul.dropdown {
+        display: none; position: absolute;
+        top: 100%; left: 50%;
+        padding: 0; margin-top: 0; min-width: 95px;
+        transform: translateX(-50%);
+        background-color: rgb(153, 0, 0);
+        text-align: center;
+    }
+    .navbar ul li:hover ul.dropdown {
+        display: block;
+    }
+    .navbar a {
+        padding: 20px; margin-left: -25px;
+    }
+}
 @media (max-width: 405px) {
     .navbar {
         display: flex; flex-direction: column; justify-content: space-around;
@@ -938,7 +968,7 @@ a.requirement-link{
     }
     .navbar ul {
         display: flex; flex-direction: row;
-        padding: 0; margin: 0; padding-right: 10px;
+        padding: auto 10px; margin: 0; font-size: small;
     }
     .navbar ul li ul.dropdown {
         display: none; position: absolute;
@@ -969,7 +999,7 @@ a.requirement-link{
     }
     .navbar ul {
         display: flex; flex-direction: row;
-        padding: 0; margin: 0; padding-right: 10px;
+        padding: auto 10px; margin: 0; font-size: small;
     }
     .navbar ul li ul.dropdown {
         display: none; position: absolute;
@@ -1000,7 +1030,7 @@ a.requirement-link{
     }
     .navbar ul {
         display: flex; flex-direction: row;
-        padding: 0; margin: 0; padding-right: 10px;
+        padding: auto 10px; margin: 0; font-size: small;
     }
     .navbar ul li ul.dropdown {
         display: none; position: absolute;
