--- a/style.css
+++ b/style.css
@@ -1268,7 +1268,7 @@ h3 {
     font-size: 1rem;
 }
 .tryout-image {
-    max-width: 100%; height: auto;
+    max-width: 100%; height: 50%;
     margin-top: 20px;
 }
 .requirements-flex-container {
